Fixed z-index issues between canvas and modal; implemented saving to local storage upon canvas changes.

--- a/studio/src/components/ChocoWinCanvas.css
+++ b/studio/src/components/ChocoWinCanvas.css
@@ -24,7 +24,7 @@
 
 .chocoWinBoundingBox.active {
     border: 20px solid yellow;
-    z-index: 999;
+    z-index: 20;
     background: #FFFF0088;
     animation: chocoWinBoundingBoxOscillation 2s infinite;
 }
